fix centering issues when on mobile

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ header {
   /* makes the paragraph block go more to the right */
   justify-content: center;
   flex-wrap: wrap;
-  gap: 100px;
+  gap: 160px;
 }
 
 .story-image-back, .story-image-front {
@@ -135,19 +135,18 @@ header {
   width: 488px;
   height: 468px;
   z-index: -1;
+  position: relative;
 }
 
 .story-image-front {
   width: 338px;
   height: 358px;
+  position: absolute;
   /* overlay in front */
   z-index: 1;
   margin: -284px 100px;
 }
 
-.story-left {
-  padding-bottom: 150px;
-}
 
 .story-right {
   padding-top: 105px;
@@ -158,6 +157,7 @@ header {
 
 .overlay-tank {
   margin-bottom: 50px;
+  margin: 0 auto;
 }
 
 .socials {
